--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -12,11 +12,58 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+###############################################################################
+# CMake build rules for Fast DDS Monitor Documentation
+###############################################################################
+cmake_minimum_required(VERSION 3.5)
+cmake_policy(VERSION 3.5...3.13)
+
+###############################################################################
+# Version
+###############################################################################
+set(PRODUCT_MAJOR_VERSION 0)
+set(PRODUCT_MINOR_VERSION 1)
+set(PRODUCT_PATCH_VERSION 0)
+set(PRODUCT_VERSION_STR ${PRODUCT_MAJOR_VERSION}.${PRODUCT_MINOR_VERSION}.${PRODUCT_PATCH_VERSION})
+
+###############################################################################
+# Project
+###############################################################################
+project(fastdds-monitor-docs)
+set(PROJECT_VERSION_MAJOR "${PRODUCT_MAJOR_VERSION}")
+set(PROJECT_VERSION_MINOR "${PRODUCT_MINOR_VERSION}")
+set(PROJECT_VERSION_PATCH "${PRODUCT_PATCH_VERSION}")
+set(PROJECT_VERSION "${PRODUCT_VERSION_STR}")
+
+set(PROJECT_NAME_LARGE "Fast DDS Monitor Documentation")
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
+set(${PROJECT_NAME}_DESCRIPTION_SUMMARY "ReadTheDocs documentation of Fast DDS Monitor")
+set(${PROJECT_NAME}_DESCRIPTION
+    "ReadTheDocs documentation of Fast DDS Monitor")
+
+message(STATUS "Configuring ${PROJECT_NAME_LARGE}")
+message(STATUS "Version: ${PROJECT_VERSION}")
+
+###############################################################################
+# Test
+###############################################################################
+option(BUILD_DOCUMENTATION_TESTS "Build Fast DDS Monitor documentation tests" OFF)
+
+if (BUILD_TESTS)
+    set(BUILD_DOCUMENTATION_TESTS ON)
+endif()
+
+
+if(BUILD_DOCUMENTATION_TESTS)
+    enable_testing()
+    include(CTest)
+endif()
+
 ####################################################################################################
 # Build documentation
 ####################################################################################################
 
-set(PROJECT_SOURCE_DOCS_DIR ${PROJECT_SOURCE_DIR}/docs)
+set(PROJECT_SOURCE_DOCS_DIR ${PROJECT_SOURCE_DIR})
 set(PROJECT_BINARY_DOCS_DIR ${PROJECT_BINARY_DIR}/docs)
 set(DOCS_OUTPUT_HTML_DIR ${PROJECT_BINARY_DOCS_DIR}/html)
 
