--- a/test/blackbox/CMakeLists.txt
+++ b/test/blackbox/CMakeLists.txt
@@ -12,4 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(static_mock)
+if(BUILD_MOCK)
+    add_subdirectory(static_mock)
+endif()
