--- a/test/unittest/utils/CMakeLists.txt
+++ b/test/unittest/utils/CMakeLists.txt
@@ -16,9 +16,19 @@
 # UTILS #
 #########
 
-add_executable(UtilsTest UtilsTest.cpp)
+set(UTILS_TEST_SOURCE
+    utilsTest.cpp
+    ${PROJECT_SOURCE_DIR}/src/utils.cpp)
 
-target_link_libraries(UtilsTest PUBLIC ${PROJECT_NAME} gtest)
+add_executable(UtilsTest
+    ${UTILS_TEST_SOURCE}
+    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/utils.h # if all includes are linked, statistics-backend is required
+    ${QT_RESOURCES})
+
+target_include_directories(UtilsTest PRIVATE
+    ${PROJECT_SOURCE_DIR}/include)
+
+target_link_libraries(UtilsTest PUBLIC ${QT5_LIBRARY_LINKS} gtest)
 
 set(UTILS_TEST_LIST
     void_)
@@ -34,14 +44,34 @@ endforeach()
 # BACKEND UTILS #
 #################
 
-add_executable(BackendUtilsTest BackendUtilsTest.cpp)
+set(BACKENDUTILS_TEST_SOURCE
+    backend_utilsTest.cpp
+    ${PROJECT_SOURCE_DIR}/src/backend/backend_utils.cpp
+    ${PROJECT_SOURCE_DIR}/src/utils.cpp)
 
-target_link_libraries(BackendUtilsTest PUBLIC ${PROJECT_NAME} gtest)
+set(BACKENDUTILS_TEST_HEADERS
+    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/utils.h
+    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/backend_utils.h
+    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/backend_types.h
+    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/model_types.h)
+
+add_executable(BackendUtilsTest
+    ${BACKENDUTILS_TEST_SOURCE}
+    ${BACKENDUTILS_TEST_HEADERS}
+    ${QT_RESOURCES})
+
+target_include_directories(BackendUtilsTest PRIVATE
+    ${PROJECT_SOURCE_DIR}/include)
+
+target_link_libraries(BackendUtilsTest PUBLIC
+    fastdds-statistics-backend
+    ${QT5_LIBRARY_LINKS}
+    gtest)
 
 set(BACKENDUTILS_TEST_LIST
     void_)
 
-foreach(test_name ${BackendUTILS_TEST_LIST})
+foreach(test_name ${BACKENDUTILS_TEST_LIST})
     add_test(NAME BackendUtils.${test_name}
             COMMAND BackendUtilsTest
             --gtest_filter=BackendUtils.${test_name}:*/BackendUtils.${test_name}/*)
