Refs #11300: change installation versions for github action to run correctly
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/actions/install-apt-packages/action.yml
+++ b/.github/actions/install-apt-packages/action.yml
@@ -17,7 +17,8 @@ runs:
           wget \
           libasio-dev \
           libtinyxml2-dev \
-          clang-tidy \
+          clang-tidy-10 \
           curl \
-          grep
+          grep \
+          libxcb-*
       shell: bash
